# E-Type

./: CMakeLists.txt  LICENSE  README.md
include/core/: Lesson.h
src/: CMakeLists.txt  main.cpp
src/app/: CMakeLists.txt
src/core/: CMakeLists.txt
src/ui/: CMakeLists.txt
tests/: CMakeLists.txt  test_main.cpp
